objects/Regulatory_Record__c.object
<CustomObject>
    <fields>
        <fullName>Governor_Party_Affiliation__c</fullName>
        <label>Governor Party Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Political_Party_Affiliation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governor_s_Name__c</fullName>
        <label>Governor&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governor_s_Phone__c</fullName>
        <label>Governor&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Commissioner_Party_Affiliation__c</fullName>
        <label>Insurance Commissioner Party Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Political_Party_Affiliation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Commissioner_s_Name__c</fullName>
        <label>Insurance Commissioner&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Commissioner_s_Phone__c</fullName>
        <label>Insurance Commissioner&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lt_Governor_Party_Affiliation__c</fullName>
        <label>Lt. Governor Party Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Political_Party_Affiliation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lt_Governor_s_Name__c</fullName>
        <label>Lt. Governor&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lt_Governor_s_Phone__c</fullName>
        <label>Lt. Governor&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Next_Election__c</fullName>
        <label>Next Election</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alaskan</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Regulatory Record</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Regulatory Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulatory Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>